Replace ImmutableMap.of() with Map.of(); add Checkstyle rule to forbid ImmutableMap.of; refactor imports and builders to Java Map APIs; remove unused ImmutableMap imports (#17091)